added mian.jpg, index, and style.css

--- a/index.html
+++ b/index.html
@@ -18,26 +18,32 @@
 	</nav>
 	</header>
 
+	<div class="wrapper-main">
+		<div class="content-main">
+			<img src="images/main.jpg" class="main-img">
+		</div>
 
+		<aside class="aside-main">
+			<h3>NOW IN STOCK</h3>
+			<div class="image-wrap">
+				<img class="imgs-main" src="images/lamp5.jpeg">
+				<img class="imgs-main" src="images/lamp7.jpeg">
+				<img class="imgs-main" src="images/lamp6.jpeg">
+				<img class="imgs-main" src="images/lamp2.jpeg">
+			</div>
+		</aside>
 
+		<div class="shop-now">
+			<form action="product.html">
+				<input class="shop-button" type="submit" value="SHOP NOW"></input>
+			</form>
+		</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+		<div class="secondary-content">
+			<h3>DESIGNER PRODUCTS</h3>
+			<p>A masterfully curated collection from our in-house lamp specialist, Ryan McCarty.</p>
+		</div>
+	</div>
 
 
 	<footer>
