styles, contact update, images, js

--- a/contact.html
+++ b/contact.html
@@ -18,12 +18,14 @@
 	</nav>
 	</header>
 
+	<div class="contact">
      <section id="primary">
         <h2>General Information</h2>
         <p>If you have any question about our prodcuts or if you need to make a special request, feel free to contact us any time.</p>
         <p>We prefer contacts to be sent via email and we will try to replay as quickly as possible.  Our phone hours are from 9:00am to 12:00pm central.</p>
         <p>You can also follow us on Facebook for future updates and chances to receive discount product codes.</p>
       </section>
+      </div>
       <section id="secondary">
         <h3>Contact Details</h3>
         <ul class="contactInfo">
@@ -32,6 +34,7 @@
           <li class="social"><a href="https://www.facebook.com/Solid-Gold-Co-409256319436664/">Social Website</a></li>
         </ul>
       </section>
+
 	<footer>
 		<p>&copy;Solid Gold Lamp Co. | 2017</p>
 	</footer>
