--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,7 @@
           <li class="social"><a href="https://www.facebook.com/Solid-Gold-Co-409256319436664/">Social Website</a></li>
         </ul>
       </section>
-
-	<footer>
+	<footer class="contactFooter">
 		<p>&copy;Solid Gold Lamp Co. | 2017</p>
 	</footer>
 </body>
