last commit really

--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
 		</ul>
 	</nav>
 	</header>
+	<div class="wrapper-main">
 	<section id="main">
 	<h2 class="h2"><span>About the  Solid Gold Inc.</span><br>Welcome inside our company</h2>
 
@@ -30,7 +31,7 @@
 	<img src="images/kid2.jpeg" id="kid" width="800px" height="480px">
 	</div>
 	</section>
-
+	</div>
 
 
 
