--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 		</ul>
 	</nav>
 	</header>
-
+	<div class="wrapper-main">
 	<div class="contact">
      <section id="primary">
         <h2>General Information</h2>
@@ -34,6 +34,7 @@
           <li class="social"><a href="https://www.facebook.com/Solid-Gold-Co-409256319436664/">Social Website</a></li>
         </ul>
       </section>
+      </div>
 	<footer class="contactFooter">
 		<p>&copy;Solid Gold Lamp Co. | 2017</p>
 	</footer>
