--- a/joblisting.html
+++ b/joblisting.html
@@ -17,6 +17,7 @@
 		</ul>
 	</nav>
 	</header>
+	<div class="wrapper-main">
 	<div id="joblisting">
 
 
@@ -34,6 +35,7 @@
 
 
 	<script src="jobs.js"></script>
+    </div>
     </div>
 	<footer>
 		<p>&copy;Solid Gold Lamp Co. | 2017</p>
