--- a/product.html
+++ b/product.html
@@ -17,7 +17,9 @@
 		</ul>
 	</nav>
 	</header>
+	<div class="wrapper-main">
 	<div id="test"></div>
+	</div>
 	<footer>
 		<p>&copy;Solid Gold Lamp Co. | 2017</p>
 	</footer>
